--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "country-state-city": "^3.2.1",
-    "lottie-react": "^2.4.0",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-lottie": "^1.2.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
