--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "country-state-city": "^3.2.1",
+    "firebase": "^10.6.0",
     "nodemon": "^3.0.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
