--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.5.1",
     "country-state-city": "^3.2.1",
     "firebase": "^10.6.0",
+    "js-cookie": "^3.0.5",
     "nodemon": "^3.0.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
